--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <style></style>
+    <link rel="stylesheet" href="styles/styles.css">
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
     </script>
@@ -15,6 +15,11 @@
 
   </head>
 <body>
+  <h1 align="center">MY STUPID GAME</h1>
+  <div class="wrapper">
+    <div class="centerItem" id="myCanvas"></div>
+  </div>
+
 
 
 
@@ -23,11 +28,14 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="libraries/p5.js"></script>
-  <script type="text/javascript" src="libraries/p5.dom.js"></script>
   <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-  <script type="text/javascript" src="scripts/sketch.js"></script>
-  <script>
+  <script type="text/javascript" src="lib/p5.js"></script>
+  <script type="text/javascript" src="lib/p5.dom.js"></script>
+  <script type="text/javascript" src="lib/p5.play.js"></script>
+  <script type="text/javascript" src="scripts/moonMeteor.js"></script>
+
+
+
 
   </script>
 </body>
