--- a/index.html
+++ b/index.html
@@ -15,12 +15,55 @@
 
   </head>
 <body>
-  <h1 align="center">MY STUPID GAME</h1>
-  <div class="wrapper">
-    <div class="centerItem" id="myCanvas"></div>
-  </div>
+  <h1 align="center">MOON BASE METEOR CLEAN-UP CREW</h1>
+  <h2 align = "center">[Pay: Minimal] [Danger:Too high for Pay][Benefits: um …] </h2>
+  <p align = "center">
+    <b>Objectives</b>
+    Highly trained technical workers needed for the clean up of the moon asteroid field. Workers will need to collect asteroid bits and will be paid by quota.
+  </p>
 
+  <h2 align = "center">Skills Needed </h2>
+  <p align = "center">
+    Navigate Using NEW 2D Maneuver Technology
+    Each maneuver packs comes with special protective shielding™ and  friendly fire™ auto lasers
+  </p>
+  <p align = "center">
+    Be careful lasers drain shields and collected materials
+  </p>
+  <p align = "center">
+    Maneuver packs come in two types
+  </p>
+  <p align = "center">
+    RED PACKS “PLAYER 1”<br/>
+    UP Arrow Thrust<br/>
+    Left Arrow/Right Arrow Rotate<br/>
+    Down Arrow Fire auto space laser. Be careful of friendly fire. <br/>
+  </p>
 
+  <p align = "center">
+    BLUE PACKS “PLAYER 2”<br/>
+    “W” Arrow Thrust<br/>
+    “A/D”Rotate<br/>
+    “S” Fire auto space laser.<br/>
+  </p>
+
+  <p align = "center">
+    Your automated collision detection collection systems will automatically capture debris that come into your vicinity. Due to strange quantum effects the waste of the debris creates strange dangerous radioactive obstacles.
+  </p>
+
+  <h2 align = "center">Interact with look wild life. </h2>
+  <p align = "center">
+  Space Llamas: These Strange Creates hop around the moon. Very peaceful collecting them will go towards your bounty and their natural radioactive fur will instantly restore your shields.
+  Mutants:
+  </p>
+  <p align = "center">
+  Mutants:Oddly enough certain people got caught in the moon explosion causing them to mutate into horrifyingly ugly monsters. Direct contact will cause damage to shields
+  </p>
+
+  <h2 align="center">APPLY HERE</h2>
+  <a href="game.html">
+    <img src="assets/Capture.png" alt="LINK PAGE" />
+  </a>
 
 
   <!-- Optional JavaScript -->
