Base Game Version 0.2.0

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <h2 align="center">APPLY HERE</h2>
   <a href="game.html">
-    <img src="assets/Capture.png" alt="LINK PAGE" />
+    <img src="assets/Capture.PNG" alt="LINK PAGE" />
   </a>
 
 
