Base Game Version 0.2.0

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     RED PACKS “PLAYER 1”<br/>
     UP Arrow Thrust<br/>
     Left Arrow/Right Arrow Rotate<br/>
-    Down Arrow Fire auto space laser. Be careful of friendly fire. <br/>
+    Down Arrow Fire auto space laser.<br/>
+  </br/>
+    Be careful of friendly fire. <br/>
   </p>
 
   <p align = "center">
@@ -51,7 +53,7 @@
     Your automated collision detection collection systems will automatically capture debris that come into your vicinity. Due to strange quantum effects the waste of the debris creates strange dangerous radioactive obstacles.
   </p>
 
-  <h2 align = "center">Interact with look wild life. </h2>
+  <h2 align = "center">Interact with local wild life. </h2>
   <p align = "center">
   Space Llamas: These Strange Creates hop around the moon. Very peaceful collecting them will go towards your bounty and their natural radioactive fur will instantly restore your shields.
   Mutants:
